--- a/previews/PR444/examples/docs_4_rational_opt/index.html
+++ b/previews/PR444/examples/docs_4_rational_opt/index.html
@@ -34,17 +34,17 @@ LMO: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   7.595936e-01   1.316493e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   7.623447e-01   2.623485e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   7.650875e-01   3.921120e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   7.680978e-01   5.207670e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   7.712014e-01   6.483391e+01
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   7.745021e-01   7.746912e+01
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   7.782907e-01   8.994068e+01
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   7.817731e-01   1.023315e+02
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   7.853951e-01   1.145920e+02
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   7.893226e-01   1.266909e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   7.907192e-01   1.277318e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   6.383307e-01   1.566586e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   6.406545e-01   3.121808e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   6.429761e-01   4.665803e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   6.456474e-01   6.195332e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   6.483943e-01   7.711357e+01
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   6.514038e-01   9.210877e+01
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   6.547884e-01   1.069048e+02
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   6.581716e-01   1.215489e+02
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   6.618089e-01   1.359909e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   6.655188e-01   1.502587e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   6.668123e-01   1.514669e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -67,16 +67,16 @@ LMO: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   5.938605e-01   1.683897e+01
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   5.960655e-01   3.355336e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   5.980999e-01   5.015885e+01
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   6.004913e-01   6.661212e+01
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   6.034156e-01   8.286163e+01
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   6.067862e-01   9.888162e+01
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   6.103288e-01   1.146923e+02
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   6.143354e-01   1.302220e+02
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   8.860973e-01   1.015690e+02
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   8.910562e-01   1.122264e+02
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   8.922104e-01   1.120812e+02
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   5.428333e-01   1.842186e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   5.453422e-01   3.667422e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   5.474093e-01   5.480360e+01
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   5.497721e-01   7.275742e+01
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   5.525589e-01   9.048808e+01
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   5.558140e-01   1.079498e+02
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   5.594038e-01   1.251332e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   5.633683e-01   1.420030e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   5.677425e-01   1.585226e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   5.725455e-01   1.746586e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   5.735684e-01   1.743471e+02
 -------------------------------------------------------------------------------------------------
-  1.265984 seconds (1.63 M allocations: 91.529 MiB, 19.41% gc time, 1.17% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Thursday 9 November 2023 22:17">Thursday 9 November 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  0.911276 seconds (1.63 M allocations: 91.533 MiB, 1.63% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Thursday 9 November 2023 22:45">Thursday 9 November 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
